--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@vicons/fa": "^0.11.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -23,8 +24,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "naive-ui": "^2.19.5",
     "sass": "^1.42.1",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "vfonts": "^0.1.0"
   },
   "eslintConfig": {
     "root": true,
