--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vee-validate/rules": "^4.5.2",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "faker": "^5.5.3",
     "vee-validate": "^4.5.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11"
